--- a/github_cred.conf
+++ b/github_cred.conf
@@ -1,6 +1,6 @@
 [github]
 username=shridharpoman@github.com
-password=295f9be1c7a7ffbf28953121eb40bd0f74e0c967
+password=insert token here
 
 [team_csv]
 csv=./aut.csv
